# pretty-bench

./: Cargo.toml
bindings/: Cargo.toml
bindings/headers/: pretty_bench.f90  pretty_bench.h
bindings/src/: lib.rs
common/: Cargo.toml
common/src/: bench_group.rs  ffi.rs  lib.rs  pretty_bench.rs
example/: build.sh  env.sh  main.f90  pretty_bench.f90  pretty_bench.mod  pretty_bench_example  test.bench
examples/c/: build.sh  main.c  test.bench
examples/c-omp/: .gitignore  build.sh  env.sh  main.c  test.bench
examples/c-pthread/: build.sh  main.c
examples/fortran/: .gitignore  build.sh  env.sh  main.f90  test.bench
examples/fortran-omp/: build.sh  main.f90  test.bench
examples/rust/: .gitignore  Cargo.toml
examples/rust/src/: main.rs
pretty-bench/: Cargo.toml
pretty-bench/benches/: multi-thread-bucketed.rs  multi-thread-individual.rs  single-thread-bucketed.rs  single-thread-individual.rs
pretty-bench/src/: bench_group.rs  ffi.rs  lib.rs  pretty_bench.rs
src/: ffi.rs  lib.rs  main.rs
