[workspace]
members = ["pretty-bench", "bindings"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Noonicknames"]
rust-version = "1.85"
readme = "README.md"

[workspace.dependencies]
papaya = "0.2"
spin_sleep = "1.3"
criterion = "0.8"
rayon = "1.11.0"

[profile.release]
opt-level = "z"
overflow-checks = false
panic = "unwind"

[profile.dev.package."*"]
opt-level = 3
